Added new photos + about text

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -248,6 +248,7 @@ div#tour-container {
         justify-content: space-between;
         margin-top: 5rem;
         div.front-square {
+            flex-basis: 30%; 
             margin: 1rem;
             text-align: center;
         }
